@@ -36,6 +36,7 @@
 /* Maximum message buffers length */
 #define MAXLOGBUF	1024	/* syslog message buffer */
 #define MAXAMABUF	1024	/* amavisd communication buffer */
+#define MAXPIDLEN	6	/* pid buffer */
 
 struct mlfiCtx;
 
